Added config options for ID and Labels fields

--- a/readme.adoc
+++ b/readme.adoc
@@ -11,9 +11,9 @@ A transaction event listener checks changed Nodes against a given label, renders
 === Installation
 
 * Clone this repository and run `mvn install -DskipTests`
-* Copy the `jar` files in `target/dependencies` to your Neo4j instance's
+* Copy the `jar` files in `target/dependency` to your Neo4j instance's
   `plugins` folder
-* Also copy `target/neo4j-elasticsearch-2.2-SNAPSHOT.jar` to the
+* Also copy `target/neo4j-elasticsearch-2.3-SNAPSHOT.jar` to the
   `plugins` folder
 * Modify `conf/neo4j.properties` accordingly (see the Example section)
 * Restart Neo4j
@@ -45,6 +45,15 @@ SET n.first_name = n.first_name, n.last_name = n.last_name;
 MATCH n:Place
 SET n.name = n.name;
 ----
+
+==== ID / Labels fields
+By default, the indexes created will contain fields for the Neo4j ID and Labels, named `id` and `labels`. 
+These will be auto-created as searchable fields, but, if you'd prefer they not be included,
+simply add one or both of these lines to your `conf/neo4j.properties` file.
+```
+elasticsearch.include_id_field=false
+elasticsearch.include_labels_field=false
+```
 
 === Developing
 
