--- a/readme.adoc
+++ b/readme.adoc
@@ -10,7 +10,7 @@ A transaction event listener checks changed Nodes against a given label, renders
 
 === Installation
 
-* Clone this repository and run `mvn install -DskipTests`
+* Clone this repository and run `mvn clean install -DskipTests`
 * Copy the `jar` files in `target/dependency` to your Neo4j instance's
   `plugins` folder
 * Also copy `target/neo4j-elasticsearch-3.0-SNAPSHOT.jar` to the
