--- a/readme.adoc
+++ b/readme.adoc
@@ -4,7 +4,7 @@ image:https://travis-ci.org/neo4j-contrib/neo4j-elasticsearch.svg?branch=3.0["Bu
 
 Integrates Neo4j change-feed with an ElasticSearch cluster.
 
-The different versions of Neo4j (2.2.x, 2.3.x and 3.0.x are supported on different branches).
+The different versions of Neo4j (2.2.x, 2.3.x, 3.0.x, and 3.1.x are supported on different branches).
 
 === Approach
 
